--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -7,53 +7,17 @@
         >
         Inicio
       </a>
-      <!--inclui al menu-->
-   
-      <a routerLink="/adquisiciones" mat-list-item>
-        <mat-icon aria-hidden="false">menu_book</mat-icon>
-        Adquisición
-      </a>
-      <!--inclui al menu-->
-      <a routerLink="/ventas" mat-list-item>
-        <mat-icon aria-hidden="false" aria-label="Example home icon"
-          >shopping_bag</mat-icon
-        >
-        Ventas
-      </a>
-
-      <a routerLink="/categorias" mat-list-item>
-        <mat-icon aria-hidden="false" aria-label="Example home icon"
-          >inventory</mat-icon
-        >
-        Categorias
-      </a>
-      <a routerLink="/productos" mat-list-item>
-        <mat-icon aria-hidden="false" aria-label="Example home icon"
-          >list_alt</mat-icon
-        >
-        Productos
-      </a>
-      <a routerLink="/proveedores" mat-list-item>
-        <mat-icon aria-hidden="false">how_to_reg</mat-icon>
-        Proveedor
-      </a>
-
+      <!--inclui al menu--> 
       <a routerLink="/clientes" mat-list-item>
-        <mat-icon aria-hidden="false">people</mat-icon>
-        Cliente
+        <mat-icon aria-hidden="false">save</mat-icon>
+        Gestón de discos
       </a>
 
-       <!--inclui al menu-->
-    <!--    <a routerLink="/grupos" mat-list-item>
-        <mat-icon aria-hidden="false">group_work</mat-icon>
-        Grupos
+      <a routerLink="/dvr" mat-list-item>
+        <mat-icon aria-hidden="false">dvr</mat-icon>
+        Gestón de DVR
       </a>
 
-      <a routerLink="/conceptos" mat-list-item>
-        <mat-icon aria-hidden="false">perm_data_setting</mat-icon>
-        Concepto
-      </a>
- -->
 
       <a routerLink="/usuarios" mat-list-item>
         <mat-icon aria-hidden="false">people</mat-icon>
