--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -8,14 +8,19 @@
         Inicio
       </a>
       <!--inclui al menu--> 
-      <a routerLink="/clientes" mat-list-item>
+      <a routerLink="/discos" mat-list-item>
         <mat-icon aria-hidden="false">save</mat-icon>
         Gestón de discos
       </a>
 
       <a routerLink="/dvr" mat-list-item>
         <mat-icon aria-hidden="false">dvr</mat-icon>
-        Gestón de DVR
+        Gestión de DVR
+      </a>
+
+      <a routerLink="/oficinas" mat-list-item>
+        <mat-icon aria-hidden="false">maps_home_work</mat-icon>
+        Gestión de Oficinas
       </a>
 
 
