--- a/src/app/components/views/disco/add-edit-disco/add-edit-disco.component.html
+++ b/src/app/components/views/disco/add-edit-disco/add-edit-disco.component.html
@@ -1,5 +1,5 @@
-<mat-card class="dvr mat-elevation-z4">
-    <mat-card-title class="title">{{ accion }} Dvr</mat-card-title>
+<mat-card class="categoria mat-elevation-z4">
+    <mat-card-title class="title">{{ accion }} Disco</mat-card-title>
   
     <!-- <pre>{{myForm.value | json}}</pre> -->
     <form [formGroup]="myForm">
@@ -16,24 +16,19 @@
   
         <div class="col-md-3">
           <mat-form-field class="axample-container">
-            <mat-label>Marca</mat-label>
-            <input matInput formControlName="marca" />
+            <mat-label>Capacidad en GB</mat-label>
+            <input matInput formControlName="capacidad" />
           </mat-form-field>
         </div>
   
-        <div class="col-md-3">
-          <mat-form-field class="axample-container">
-            <mat-label>Modelo</mat-label>
-            <input type="text" matInput formControlName="modelo" />
-          </mat-form-field>
-        </div>
-
         <div class="col-md-3">
           <mat-form-field class="axample-container">
             <mat-label>Descripción</mat-label>
             <input type="text" matInput formControlName="descripcion" />
           </mat-form-field>
         </div>
+  
+      
   
         <br />
         <div class="col-lg-12">
@@ -49,7 +44,7 @@
   
           <button
             class="btn btn-secondary btn-md float-right"
-            routerLink="/dvr"
+            routerLink="/discos"
             type="button"
           >
             Cancelar
