--- a/src/app/components/views/oficina/add-edit-oficina/add-edit-oficina.component.html
+++ b/src/app/components/views/oficina/add-edit-oficina/add-edit-oficina.component.html
@@ -1,39 +1,27 @@
-<mat-card class="dvr mat-elevation-z4">
-    <mat-card-title class="title">{{ accion }} Dvr</mat-card-title>
+<mat-card class="categoria mat-elevation-z4">
+    <mat-card-title class="title">{{ accion }} Oficina</mat-card-title>
   
     <!-- <pre>{{myForm.value | json}}</pre> -->
     <form [formGroup]="myForm">
       <div class="row">
         <div class="col-md-3">
           <mat-form-field class="axample-container">
-            <mat-label>Código Activo</mat-label>
-            <input type="text" matInput formControlName="codigoactivo" />
+            <mat-label>Oficina</mat-label>
+            <input type="text" matInput formControlName="oficina" />
           </mat-form-field>
-          <div *ngIf=" myForm.get('codigoactivo').hasError('required') && myForm.get('codigoactivo').touched" style="margin-top: -20px">
+          <div *ngIf=" myForm.get('oficina').hasError('required') && myForm.get('oficina').touched" style="margin-top: -20px">
             <span class="mda-form-msg">Este campo es <strong>requerido</strong></span>
           </div>
         </div>
   
         <div class="col-md-3">
           <mat-form-field class="axample-container">
-            <mat-label>Marca</mat-label>
-            <input matInput formControlName="marca" />
+            <mat-label>Descripción</mat-label>
+            <input matInput formControlName="descripcion" />
           </mat-form-field>
         </div>
   
-        <div class="col-md-3">
-          <mat-form-field class="axample-container">
-            <mat-label>Modelo</mat-label>
-            <input type="text" matInput formControlName="modelo" />
-          </mat-form-field>
-        </div>
-
-        <div class="col-md-3">
-          <mat-form-field class="axample-container">
-            <mat-label>Descripción</mat-label>
-            <input type="text" matInput formControlName="descripcion" />
-          </mat-form-field>
-        </div>
+        
   
         <br />
         <div class="col-lg-12">
@@ -49,7 +37,7 @@
   
           <button
             class="btn btn-secondary btn-md float-right"
-            routerLink="/dvr"
+            routerLink="/oficinas"
             type="button"
           >
             Cancelar
